sip4 (4.18.1+dfsg-1) UNRELEASED; urgency=medium

  * New upstream release.
  * Document two new options in sip.1 manpage.

 -- Dmitry Shachnev <mitya57@debian.org>  Tue, 26 Apr 2016 15:58:52 +0300

sip4 (4.18+dfsg-1) unstable; urgency=medium

  [ Scott Kitterman ]
  * New upstream release
  * Update sip provides for new sip API version 11.3
  * Bump standards version to 3.9.8 without further change
  * Update debian/copyright for 2016
  * Adjust debian/rules to copy typehints file (sip.pyi) into the build
    directories
  * Update debian/python{3}-sip.install to include .pyi file

  [ Ondřej Novy ]
  * Fixed VCS URL (https)

 -- Scott Kitterman <scott@kitterman.com>  Fri, 15 Apr 2016 19:47:50 -0400

sip4 (4.17+dfsg-2) unstable; urgency=medium

  * Apply debian/rules patch to make package build reproducible (Closes:
    #815512)
    - Thanks to Reiner Herrmann for the patch

 -- Scott Kitterman <scott@kitterman.com>  Mon, 22 Feb 2016 16:28:25 -0500

sip4 (4.17+dfsg-1) unstable; urgency=medium

  * New upstream release

 -- Scott Kitterman <scott@kitterman.com>  Sat, 24 Oct 2015 14:19:18 -0400

sip4 (4.16.9+dfsg-2) unstable; urgency=medium

  [ Andreas Beckmann ]
  * python-sip: Add Breaks against obsolete and buggy transitional
    package python-sip4-dbg to ensure its removal.  (Closes: #789452)

  [ Dmitry Shachnev ]
  * Build with Sphinx 1.3.
  * Do not compile C code during arch-indep build, to speed it up.
  * Move python-sphinx to Build-Depends-Indep.
  * Unify indentation in debian/rules.
  * Remove unused INSTDIR variable.

 -- Dmitry Shachnev <mitya57@debian.org>  Mon, 07 Sep 2015 12:10:41 +0300

sip4 (4.16.9+dfsg-1) unstable; urgency=medium

  [ Dmitry Shachnev ]
  * More minor simplifications to sipconfig wrappers.

  [ Scott Kitterman ]
  * New upstream release

 -- Scott Kitterman <scott@kitterman.com>  Sun, 19 Jul 2015 12:17:06 -0400

sip4 (4.16.8+dfsg-2) unstable; urgency=medium

  * Fix package names in error messages in sipconfig files.