@@ -6,7 +6,8 @@ Uploaders: Torsten Marek <shlomme@debian.org>,
            Michael Casadevall <mcasadevall@debian.org>,
            Scott Kitterman <scott@kitterman.com>,
            Dmitry Shachnev <mitya57@debian.org>
-Build-Depends: debhelper (>= 9),
+Build-Depends: bison,
+               debhelper (>= 9),
                dh-python,
                dpkg-dev (>= 1.16.1~),
                flex,
